# MVPanelsSim

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  batch_offline.mac  electron.mac  init_vis.mac  sim.cc  vis.mac  vis_test_muons.mac  vis_test_muons.mac~
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  DetectorMessenger.hh~  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SIPMSD.hh  SteppingAction.hh  TrackingAction.hh
src/: ActionInitialization.cc  CMakeLists.txt~  DetectorConstruction.cc  DetectorConstruction.cc~  DetectorConstruction.hh~  DetectorMessenger.cc  DetectorMessenger.cc~  EventAction.cc  EventAction.cc~  EventAction.hh~  PhysicsList.cc  PhysicsList.cc~  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  RunAction.cc  RunAction.cc~  SIPMSD.cc  SIPMSD.cc~  SIPMSD.hh~  SteppingAction.cc  SteppingAction.cc~  TrackingAction.cc  TrackingAction.cc~  sim.cc~  vis.mac~
